--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: Jekyll Netlify CMS
-email: your-email@example.com
+email: anna@maban.co.uk
 description: >- # this means to ignore newlines until "baseurl:"
   This is the basic Jekyll starter site, with Netlify CMS integrated and using
   Netlify Identity for authentication.
