--- a/_config.yml
+++ b/_config.yml
@@ -21,8 +21,6 @@ description: >- # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 
-# Build settings
-theme: minima
 
 # minima theme settings
 show_excerpts: false # set to true to show excerpts on the homepage
@@ -41,22 +39,6 @@ minima:
 twitter_username: jekyllrb
 github_username:  jekyll
 rss: rss
-# dribbble_username: jekyll
-# facebook_username: jekyll
-# flickr_username: jekyll
-# instagram_username: jekyll
-# linkedin_username: jekyll
-# pinterest_username: jekyll
-# youtube_username: jekyll
-# googleplus_username: +jekyll
-
-# Mastodon instances
-# mastodon:
-# - username: jekyll
-#   instance: example.com
-# - username: jekyll2
-#   instance: example.com
-
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
@@ -69,3 +51,9 @@ rss: rss
 #   - vendor/cache/
 #   - vendor/gems/
 #   - vendor/ruby/
+
+collections:
+  events:
+    output: true
+  companies:
+    output: true
