feat: add admin ui

--- a/admin/config.yml
+++ b/admin/config.yml
@@ -17,3 +17,15 @@ collections: # A list of collections the CMS should be able to edit
       - {label: "Body", name: "body", widget: "markdown"}
       - {label: "Categories", name: "categories", widget: "string", required: false}
       - {label: "Publish Date", name: "date", widget: "datetime", format: "YYYY-MM-DD hh:mm:ss"}
+  - name: "event" # Used in routes, ie.: /admin/collections/:slug/edit
+    label: "Launch Events" # Used in the UI, ie.: "New Post"
+    folder: "_events" # The path to the folder where the documents are stored
+    sort: "title:asc" # Default is title:asc
+    create: true # Allow users to create new documents in this collection
+    slug: "{{slug}}"
+    fields: # The fields each document in this collection have
+      - {label: "Layout", name: "layout", widget: "hidden", default: "post"}
+      - {label: "Title", name: "title", widget: "string", tagname: "h1"}
+      - {label: "Body", name: "body", widget: "markdown"}
+      - {label: "Start Date", name: "startDate", widget: "datetime", format: "YYYY-MM-DD"}
+      - {label: "Finish Date", name: "finishDate", widget: "datetime", format: "YYYY-MM-DD"}
