--- a/admin/config.yml
+++ b/admin/config.yml
@@ -11,6 +11,8 @@ collections: # A list of collections the CMS should be able to edit
     sort: "date:desc" # Default is title:asc
     create: true # Allow users to create new documents in this collection
     slug: "{{year}}-{{month}}-{{day}}-{{slug}}"
+    extension: "yaml"
+    format: "yaml"
     fields: # The fields each document in this collection have
       - {label: "Layout", name: "layout", widget: "hidden", default: "post"}
       - {label: "Title", name: "title", widget: "string", tagname: "h1"}
@@ -23,25 +25,29 @@ collections: # A list of collections the CMS should be able to edit
     sort: "title:asc"
     create: true
     slug: "{{slug}}"
+    extension: "yaml"
+    format: "yaml"
     fields:
-      - {label: "Layout", name: "layout", widget: "hidden", default: "post"}
+      - {label: "Layout", name: "layout", widget: "hidden", default: "company"}
       - {label: "Company", name: "company", widget: "relation", collection: "companies", value_field: "company.title", search_fields: ["company.title"]}
       - {label: "Title", name: "title", widget: "string"}
-      - {label: "Body", name: "body", widget: "markdown"}
+      - {label: "Description", name: "body", widget: "markdown"}
       - {label: "Link", name: "link", widget: "string"}
       - {label: "Image", name: "image", widget: "image"}
-      - {label: "Start Date", name: "startDate", widget: "datetime", format: "YYYY-MM-DD"}
-      - {label: "Finish Date", name: "finishDate", widget: "datetime", format: "YYYY-MM-DD"}
+      - {label: "Start Date", name: "startDate", widget: "datetime", date_format: "dddd Do MMMM YYYY", time_format: false}
+      - {label: "Finish Date", name: "finishDate", widget: "datetime", date_format: "dddd Do MMMM YYYY", time_format: false}
   - name: "company"
     label: "Companies"
     folder: "_companies"
     sort: "title:asc"
     create: true
     slug: "{{slug}}"
+    extension: "yaml"
+    format: "yaml"
     fields:
-      - {label: "Layout", name: "layout", widget: "hidden", default: "post"}
+      - {label: "Layout", name: "layout", widget: "hidden", default: "event"}
       - {label: "Events", name: "events", widget: "relation", collection: "events", value_field: "event.title", search_fields: ["event.title"]}
       - {label: "Title", name: "title", widget: "string"}
-      - {label: "Body", name: "body", widget: "markdown"}
+      - {label: "Description", name: "body", widget: "markdown"}
       - {label: "Link", name: "link", widget: "string"}
       - {label: "Image", name: "image", widget: "image"}
