fix: change format to markdown

--- a/admin/config.yml
+++ b/admin/config.yml
@@ -11,8 +11,8 @@ collections: # A list of collections the CMS should be able to edit
     sort: "date:desc" # Default is title:asc
     create: true # Allow users to create new documents in this collection
     slug: "{{year}}-{{month}}-{{day}}-{{slug}}"
-    extension: "yaml"
-    format: "yaml"
+    extension: "md"
+    format: "md"
     fields: # The fields each document in this collection have
       - {label: "Layout", name: "layout", widget: "hidden", default: "post"}
       - {label: "Title", name: "title", widget: "string", tagname: "h1"}
@@ -25,8 +25,8 @@ collections: # A list of collections the CMS should be able to edit
     sort: "title:asc"
     create: true
     slug: "{{slug}}"
-    extension: "yaml"
-    format: "yaml"
+    extension: "md"
+    format: "md"
     fields:
       - {label: "Layout", name: "layout", widget: "hidden", default: "company"}
       - {label: "Company", name: "company", widget: "relation", collection: "companies", value_field: "company.title", search_fields: ["company.title"]}
@@ -42,8 +42,8 @@ collections: # A list of collections the CMS should be able to edit
     sort: "title:asc"
     create: true
     slug: "{{slug}}"
-    extension: "yaml"
-    format: "yaml"
+    extension: "md"
+    format: "md"
     fields:
       - {label: "Layout", name: "layout", widget: "hidden", default: "event"}
       - {label: "Events", name: "events", widget: "relation", collection: "events", value_field: "event.title", search_fields: ["event.title"]}
