fix: layouts and get loop running on homepage

--- a/_config.yml
+++ b/_config.yml
@@ -42,6 +42,12 @@ rss: rss
 #   - vendor/gems/
 #   - vendor/ruby/
 
+defaults:
+  - scope:
+      path: "" # an empty string here means all files in the project
+    values:
+      layout: "default"
+
 collections:
   events:
     output: true
