--- a/admin/config.yml
+++ b/admin/config.yml
@@ -29,7 +29,7 @@ collections: # A list of collections the CMS should be able to edit
     format: "yaml-frontmatter"
     fields:
       - {label: "Layout", name: "layout", widget: "hidden", default: "company"}
-      - {label: "Company", name: "company", widget: "relation", collection: "companies", value_field: "company.title", search_fields: ["company.title"], required: false}
+      - {label: "Company", name: "company", widget: "relation", collection: "company", value_field: "title", search_fields: ["title"], required: false}
       - {label: "Title", name: "title", widget: "string", required: false}
       - {label: "Description", name: "body", widget: "markdown", required: false}
       - {label: "Link", name: "link", widget: "string", required: false}
@@ -46,7 +46,7 @@ collections: # A list of collections the CMS should be able to edit
     format: "yaml-frontmatter"
     fields:
       - {label: "Layout", name: "layout", widget: "hidden", default: "event"}
-      - {label: "Events", name: "events", widget: "relation", collection: "events", value_field: "title", search_fields: ["title"], required: false}
+      - {label: "Events", name: "events", widget: "relation", collection: "event", value_field: "title", search_fields: ["title"], required: false}
       - {label: "Title", name: "title", widget: "string", required: false}
       - {label: "Description", name: "body", widget: "markdown", required: false}
       - {label: "Link", name: "link", widget: "string", required: false}
