--- a/admin/config.yml
+++ b/admin/config.yml
@@ -46,7 +46,7 @@ collections: # A list of collections the CMS should be able to edit
     format: "yaml-frontmatter"
     fields:
       - {label: "Layout", name: "layout", widget: "hidden", default: "event"}
-      - {label: "Events", name: "events", widget: "relation", collection: "event", value_field: "title", search_fields: ["title"], required: false}
+      - {label: "Events", name: "events", widget: "relation", collection: "event", value_field: "title", search_fields: ["title"], required: false, multiple: true}
       - {label: "Title", name: "title", widget: "string", required: false}
       - {label: "Description", name: "body", widget: "markdown", required: false}
       - {label: "Link", name: "link", widget: "string", required: false}
