--- a/admin/config.yml
+++ b/admin/config.yml
@@ -1,24 +1,10 @@
 backend:
   name: git-gateway
-  branch: master # Branch to update (master by default)
+  branch: master
 
-media_folder: "media" # Folder where user uploaded files should go
+media_folder: "media"
 
-collections: # A list of collections the CMS should be able to edit
-  - name: "post" # Used in routes, ie.: /admin/collections/:slug/edit
-    label: "Post" # Used in the UI, ie.: "New Post"
-    folder: "_posts" # The path to the folder where the documents are stored
-    sort: "date:desc" # Default is title:asc
-    create: true # Allow users to create new documents in this collection
-    slug: "{{year}}-{{month}}-{{day}}-{{slug}}"
-    extension: "md"
-    format: "yaml-frontmatter"
-    fields: # The fields each document in this collection have
-      - {label: "Layout", name: "layout", widget: "hidden", default: "post"}
-      - {label: "Title", name: "title", widget: "string", tagname: "h1"}
-      - {label: "Body", name: "body", widget: "markdown"}
-      - {label: "Categories", name: "categories", widget: "string", required: false}
-      - {label: "Publish Date", name: "date", widget: "datetime", format: "YYYY-MM-DD hh:mm:ss"}
+collections:
   - name: "event"
     label: "Launch Events"
     folder: "_events"
@@ -33,7 +19,7 @@ collections: # A list of collections the CMS should be able to edit
       - {label: "Title", name: "title", widget: "string", required: false}
       - {label: "Description", name: "body", widget: "markdown", required: false}
       - {label: "Link", name: "link", widget: "string", required: false}
-      - {label: "Image", name: "image", widget: "image", required: false}
+      - {label: "Image", name: "image", widget: "image", required: false, hint: "This needs to be a 1500x400px png with the filename `event-companyname-number`."}
       - {label: "Start Date", name: "startDate", widget: "datetime", date_format: "dddd Do MMMM YYYY", time_format: false, required: false}
       - {label: "Finish Date", name: "finishDate", widget: "datetime", date_format: "dddd Do MMMM YYYY", time_format: false, required: false}
   - name: "company"
@@ -48,6 +34,5 @@ collections: # A list of collections the CMS should be able to edit
       - {label: "Layout", name: "layout", widget: "hidden", default: "event"}
       - {label: "Events", name: "events", widget: "relation", collection: "event", value_field: "title", search_fields: ["title"], required: false, multiple: true}
       - {label: "Title", name: "title", widget: "string", required: false}
-      - {label: "Description", name: "body", widget: "markdown", required: false}
       - {label: "Link", name: "link", widget: "string", required: false}
-      - {label: "Image", name: "image", widget: "image", required: false}
+      - {label: "Image", name: "image", widget: "image", required: false, hint: "This needs to be a 400x400px png with the filename `avatar-companyname`."}
